[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/components/submenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/menus/audio_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/1x/return.png" type="Texture" id=3]
[ext_resource path="res://scripts/components/interactive_button.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/components/audio_slider.tscn" type="PackedScene" id=5]

[node name="audio_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Submenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
custom_constants/separation = 50

[node name="button_back" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_left = 1487.0
margin_right = 1820.0
margin_bottom = 60.0
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_previous = NodePath(".")
size_flags_horizontal = 8
text = "BUTTON_BACK"
icon = ExtResource( 3 )

[node name="InteractiveButton" type="Node" parent="MarginContainer/VBoxContainer/button_back"]
script = ExtResource( 4 )

[node name="master" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 110.0
margin_right = 1820.0
margin_bottom = 170.0

[node name="music" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 220.0
margin_right = 1820.0
margin_bottom = 280.0
label_text = "LABEL_MUSIC_BUS"
audio_bus = 3

[node name="ui" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 330.0
margin_right = 1820.0
margin_bottom = 390.0
label_text = "LABEL_UI_BUS"
audio_bus = 1

[node name="fx" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 440.0
margin_right = 1820.0
margin_bottom = 500.0
label_text = "LABEL_FX_BUS"
audio_bus = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 733.0
margin_top = 550.0
margin_right = 1087.0
margin_bottom = 610.0
size_flags_horizontal = 4
custom_constants/separation = 50

[node name="button_reset" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 354.0
margin_bottom = 60.0
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
size_flags_horizontal = 4
text = "BUTTON_RESET"
icon = ExtResource( 3 )

[node name="InteractiveButton" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer/button_reset"]
script = ExtResource( 4 )

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/button_back" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/button_reset" to="." method="_on_button_reset_pressed"]
